<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/category_text_view"
            android:layout_gravity="center"
            android:text="@string/item"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>


        <LinearLayout
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_name"
                android:hint="@string/product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_quantity"
                android:hint="@string/quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>

            <EditText
                android:id="@+id/edit_supplier"
                android:hint="@string/supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>

            <EditText
                android:id="@+id/edit_phone_number"
                android:hint="@string/phone_number"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
